@@ -1,3 +1,23 @@
+CREATE PROCEDURE zbx_drop_indexes()
+LANGUAGE SQL
+BEGIN
+	DECLARE idx_exists INTEGER;
+
+	SELECT COUNT(*) INTO idx_exists FROM SYSCAT.INDEXES WHERE INDNAME='NODE_CKSUM_1';
+	IF idx_exists > 0 THEN
+		DROP INDEX NODE_CKSUM_1;
+	END IF;
+
+	SELECT COUNT(*) INTO idx_exists FROM SYSCAT.INDEXES WHERE INDNAME='NODE_CKSUM_CKSUM_1';
+	IF idx_exists > 0 THEN
+		DROP INDEX NODE_CKSUM_CKSUM_1;
+	END IF;
+END
+/
+CALL zbx_drop_indexes()
+/
+DROP PROCEDURE zbx_drop_indexes
+/
 ALTER TABLE node_cksum ALTER COLUMN nodeid SET WITH DEFAULT NULL
 /
 REORG TABLE node_cksum
