@@ -1,3 +1,19 @@
+DECLARE index_not_exists EXCEPTION;
+PRAGMA EXCEPTION_INIT(index_not_exists, -1418);
+BEGIN
+	EXECUTE IMMEDIATE 'DROP INDEX NODE_CKSUM_1';
+EXCEPTION
+	WHEN index_not_exists THEN NULL;
+END;
+/
+DECLARE index_not_exists EXCEPTION;
+PRAGMA EXCEPTION_INIT(index_not_exists, -1418);
+BEGIN
+	EXECUTE IMMEDIATE 'DROP INDEX NODE_CKSUM_CKSUM_1';
+EXCEPTION
+	WHEN index_not_exists THEN NULL;
+END;
+/
 ALTER TABLE node_cksum MODIFY nodeid DEFAULT NULL;
 ALTER TABLE node_cksum MODIFY recordid DEFAULT NULL;
 DELETE FROM node_cksum WHERE NOT nodeid IN (SELECT nodeid FROM nodes);
